--- a/src/index/index.html
+++ b/src/index/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>John Moxon - Digital consultant</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css"> -->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
@@ -16,6 +16,14 @@
       <p class="subtitle">
         My first website with <strong>Bulma</strong>!
       </p>
+    </div>
+  </section>
+  <section class="section">
+    <div class="columns">
+      <div class="column">column01</div>
+      <div class="column">column02</div>
+      <div class="column">column03</div>
+      <div class="column">column04</div>
     </div>
   </section>
   </body>
