--- a/src/index/index.html
+++ b/src/index/index.html
@@ -8,7 +8,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
-  <section class="section">
+  <section class="section" id="header">
     <div class="container">
       <h1 class="title">
         rat boy 2
