--- a/src/index/index.html
+++ b/src/index/index.html
@@ -2,89 +2,141 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>John Moxon - Digital consultant</title>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css"> -->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
-  <body>
-  <section class="section" id="header">
-    <div class="container">
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
-      </p>
-      <p class="title">
-        rat boy 2
-      </p>
-    </div>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
-          <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-        </a>
+  <body id="jmoxon">
 
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-        </a>
+  <!-- Header section -->
+  <header>
+    <section class="hero">
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <h2 class="subtitle size-4">its the thoughts that count</h2>
+          <h1 class="title is-size-1 has-text-black">Train of thought</h1>
+        </div>
       </div>
+    </section>
+  </header>
 
-      <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-start">
-          <a class="navbar-item">
-            Home
+  <!-- Navigation bar -->
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <!-- <a class="navbar-item" href="https://bulma.io">
+        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      </a> -->
+      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar-menu">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+
+    <div id="navbar-menu" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item">
+          Home
+        </a>
+
+        <a class="navbar-item">
+          About
+        </a>
+
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Acticles
           </a>
 
-          <a class="navbar-item">
-            Documentation
-          </a>
-
-          <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link">
-              More
+          <div class="navbar-dropdown">
+            <a class="navbar-item">
+              Fintech
             </a>
-
-            <div class="navbar-dropdown">
-              <a class="navbar-item">
-                About
-              </a>
-              <a class="navbar-item">
-                Jobs
-              </a>
-              <a class="navbar-item">
-                Contact
-              </a>
-              <hr class="navbar-divider">
-              <a class="navbar-item">
-                Report an issue
-              </a>
-            </div>
+            <a class="navbar-item">
+              Travel
+            </a>
+            <a class="navbar-item">
+              Contact
+            </a>
+            <hr class="navbar-divider">
+            <a class="navbar-item">
+              Miscealaneous
+            </a>
           </div>
         </div>
 
-        <div class="navbar-end">
-          <div class="navbar-item">
-            <div class="buttons">
-              <a class="button is-primary">
-                <strong>Sign up</strong>
-              </a>
-              <a class="button is-light">
-                Log in
-              </a>
-            </div>
-          </div>
+        <a class="navbar-item">
+          Contact
+        </a>
+
+        <div class="navbar-item">
+          <span class="icon has-text-info">
+            <i class="fab fa-linkedin has-text-black-bis"></i>
+
+          </span>
+          <span class="icon has-text-success">
+            <i class="fas fa-check-square has-text-black-bis"></i>
+          </span>
+          <span class="icon has-text-warning">
+            <i class="fas fa-exclamation-triangle has-text-black-bis"></i>
+          </span>
+          <span class="icon has-text-danger">
+            <i class="fas fa-ban has-text-black-bis"></i>
+          </span>
         </div>
       </div>
-    </nav>
-  </section>
+
+      <div class="navbar-end">
+        <!-- <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-primary">
+              <strong>Sign up</strong>
+            </a>
+            <a class="button is-light">
+              Log in
+            </a>
+          </div>
+        </div> -->
+      </div>
+    </div>
+  </nav>
+
+  <!-- Main section -->
   <section class="section">
-    <div class="columns">
-      <div class="column">column01</div>
-      <div class="column">column02</div>
-      <div class="column">column03</div>
-      <div class="column">column04</div>
+    <div class="container">
+      <div class="columns">
+        <div class="column">column01</div>
+        <div class="column">column02</div>
+        <div class="column">column03</div>
+        <div class="column">column04</div>
+      </div>
     </div>
   </section>
+
+  <section>
+    <div class="container">
+      <div class="notification">
+        This container is <strong>centered</strong> on desktop.
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+      </p>
+    </div>
+  </footer>
+
   </body>
 </html>
