Fixed mobile nav positioning, issue with nav item padding variable

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -71,7 +71,7 @@
           Contact
         </a>
 
-        <div class="navbar-item">
+        <div class="navbar-item sharing-utility">
           <span class="icon has-text-info">
             <i class="fab fa-linkedin has-text-black-bis"></i>
           </span>
