post title styles

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -15,7 +15,7 @@
     <section class="hero">
       <div class="hero-body">
         <div class="container has-text-centered">
-          <h2 class="subtitle size-4is-spaced is-uppercase">its the thoughts that count</h2>
+          <h2 class="subtitle is-size-4 is-spaced is-uppercase">its the thoughts that count</h2>
           <h1 class="title is-size-1 has-text-black is-family-secondary">Train of thought</h1>
         </div>
       </div>
@@ -106,10 +106,12 @@
   <div class="container">
     <section class="section">
       <a href="#">
-      <div class="card">
+      <div class="card is-shadowless">
+        <h1 class="title is-3 padded-multiline">
+          <span>Watching a pademic destroy your company and the 5 reasons it will survive</span></h1>
         <div class="card-image">
           <figure class="image is-2by1">
-            <img src="https://bulma.io/images/placeholders/640x320.png" alt="Placeholder image">
+            <img src="/img/balloon-3206530_1920.jpg" alt="Placeholder image">
           </figure>
         </div>
         <div class="card-content">
@@ -144,14 +146,14 @@
     <section class="section">
       <div class="columns">
         <div class="column is-two-thirds">
-          <h2 class="title is-3 is-uppercase">Notes on a subject</h2>
+          <h2 class="title is-3 is-uppercase">Recent Articles</h2>
 
           <div class="article-list">
 
             <!-- Article 1 -->
 
 
-            <div class="card">
+            <div class="card is-shadowless">
               <div class="columns is-gapless">
                 <div class="column">
                   <div class="card-image">
@@ -193,7 +195,7 @@
 
 
             <!-- Article 2 -->
-            <div class="card">
+            <div class="card is-shadowless">
               <div class="columns is-gapless">
                 <div class="column">
                   <div class="card-image">
@@ -242,7 +244,7 @@
         <div class="column">
 
 
-          <h2 class="title is-3 is-uppercase">About Me</h2>
+          <h2 class="title is-3 is-uppercase">The Author</h2>
           <div>
             <figure class="image is-4by3">
               <img src="https://bulma.io/images/placeholders/128x128.png" alt="Placeholder image">
