configuring jekyll bootstrap

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -108,7 +108,7 @@
       <a href="#">
       <div class="card is-shadowless">
         <h1 class="title is-3 padded-multiline">
-          <span>Watching a pandemic destroy your company and the 5 reasons it will survive</span></h1>
+          <span>Watching a pandemic destroy your company and 5 reasons it will survive</span></h1>
         <div class="card-image">
           <figure class="image is-2by1">
             <img src="/img/balloon-3206530_1920.jpg" alt="Placeholder image">
