local fonts added

--- a/src/holding-page/index.html
+++ b/src/holding-page/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css"> -->
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
     <%= htmlWebpackPlugin.tags.headTags %>
@@ -280,6 +282,7 @@
       </p>
     </div>
   </footer>
+
 
   <%= htmlWebpackPlugin.tags.bodyTags %>
   </body>
