prepare for merge to master

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Lessons Learned Through A Career In Digital Leadership
 description: Articles on fintech, technology, leadership and 
 keywords: fintech, digital, leadership, technology
 #
-# permalink: /
+permalink: /home-page-test-4564563345734573456245
 ---
 
 {% comment %}
